# rust-e2ee-chat-engine

./: .gitignore  Cargo.toml
db/: .env
src/: main.rs
src/crypto/: core.rs  keypair.rs  mod.rs  salt.rs  shared_key.rs
