[package]
name = "rust-e2ee-chat-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
axum = "0.7.4"
cbc = "0.1.2"
hex = "0.4.3"
hex-literal = "0.4.1"
k256 = {version = "0.13.3", features = ["ecdh"]}
rand = "0.8.5"
rand_core = "0.6.4"
rsa = "0.9.6"
serde = "1.0.196"
sqlx = "0.7.3"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = "0.3.18"
