[package]
name = "rust-e2ee-chat-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
hex = "0.4.3"
k256 = {version = "0.13.3", features = ["ecdh"]}
rand = "0.8.5"
rand_core = "0.6.4"
serde = "1.0.196"
sqlx = "0.7.3"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = "0.3.18"
aes-gcm-siv = "0.11.1"
